@@ -78,7 +78,7 @@ showOnlyThisFrame=Zobrazit jen tento rámec
 properties=Vlastnosti
 printPage=Vytisknout stránku
 mail=Email
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 
 cut=Vyjmout
 copy=Kopírovat
