@@ -166,7 +166,7 @@
 <!ENTITY func.properties "Eigenschaften">
 <!ENTITY func.printPage "Seite drucken">
 <!ENTITY func.mail "E-Mail">
-<!ENTITY func.privateBrowsing "Toggle Private Browsing">
+<!ENTITY func.newPrivateWindow "New Private Window">
 <!ENTITY func.cut "Ausschneiden">
 <!ENTITY func.copy "Kopieren">
 <!ENTITY func.paste "Einfügen">
