@@ -57,7 +57,7 @@ showOnlyThisFrame=Nur diesen Frame anzeigen
 properties=Eigenschaften
 printPage=Seite drucken
 mail=E-Mail
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 cut=Ausschneiden
 copy=Kopieren
 paste=Einfügen
