@@ -78,7 +78,7 @@ showOnlyThisFrame=Show Only This Frame
 properties=Properties
 printPage=Print Page
 mail=Mail
-privateBrowsing=Togg. Private Brows.
+newPrivateWindow = New Private Window
 
 cut=Cut
 copy=Copy
