@@ -168,7 +168,7 @@
 <!ENTITY func.properties "Propiedades">
 <!ENTITY func.printPage "Imprimir página">
 <!ENTITY func.mail "Correo">
-<!ENTITY func.privateBrowsing "Cambiar modo privado">
+<!ENTITY func.newPrivateWindow "Nueva ventana privada">
 <!ENTITY func.cut "Cortar">
 <!ENTITY func.copy "Copiar">
 <!ENTITY func.paste "Pegar">
