@@ -71,7 +71,7 @@ showOnlyThisFrame=Mostrar sólo este marco
 properties=Propiedades
 printPage=Imprimir página
 mail=Correo
-privateBrowsing=Cambiar a modo privado
+newPrivateWindow = Nueva ventana privada
 cut=Cortar
 copy=Copiar
 paste=Pegar
