@@ -78,7 +78,7 @@ showOnlyThisFrame = Afficher ce cadre seulement
 properties=Propri\u00E9t\u00E9s
 printPage=Imprimer page
 mail=Courrier
-privateBrowsing = Basculer navig. priv\u00E9e
+newPrivateWindow = Nouvelle fenêtre de navigation priv\u00E9e
 
 cut=Couper
 copy=Copier
