@@ -168,7 +168,7 @@
 <!ENTITY func.properties "Tulajdonságok">
 <!ENTITY func.printPage "Oldal nyomtatása">
 <!ENTITY func.mail "Levél">
-<!ENTITY func.privateBrowsing "Privát böngészés">
+<!ENTITY func.newPrivateWindow "New Private Window">
 <!ENTITY func.cut "Kivágás">
 <!ENTITY func.copy "Másolás">
 <!ENTITY func.paste "Beillesztés">
