@@ -70,7 +70,7 @@ showOnlyThisFrame=Csak ezt a keretet mutassa
 properties=Tulajdonságok
 printPage=Oldal nyomtatása
 mail=Levél
-privateBrowsing=Privát böngészés
+newPrivateWindow = New Private Window
 cut=Kivágás
 copy=Másolás
 paste=Beillesztés
