@@ -64,7 +64,7 @@ showOnlyThisFrame=Mostra solo questa Frame
 properties=Proprietà
 printPage=Stampa Pagina
 mail=Mail
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 
 cut=Taglia
 copy=Copia
