@@ -78,7 +78,7 @@ showOnlyThisFrame = このフレームだけを表示
 properties=プロパティ
 printPage=ページを印刷
 mail=メール
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 
 cut=切り取り
 copy=コピー
