@@ -70,7 +70,7 @@ showOnlyThisFrame=이 프레임 만 표시
 properties=속성
 printPage=페이지 인쇄
 mail=메일
-privateBrowsing=사생활 보호 모드 전환.
+newPrivateWindow = New Private Window
 cut=잘라내기
 copy=복사
 paste=붙여넣기
