@@ -57,7 +57,7 @@ showOnlyThisFrame=Pokaż tylko tę ramkę
 properties=Właściwości
 printPage=Drukuj stronę
 mail=Poczta
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 
 cut=Wytnij
 copy=Kopiuj
