@@ -78,7 +78,7 @@ showOnlyThisFrame = Mostrar Somente Este Quadro
 properties=Propriedades
 printPage=Imprimir Página
 mail=Correio
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 
 cut=Recortar
 copy=Copiar
