@@ -57,7 +57,7 @@ showOnlyThisFrame=Zobraziť len tento rámec
 properties=Vlastnosti
 printPage=Vytlačiť stránku
 mail=Pošta
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 
 cut=Vystrihnúť
 copy=Kopírovať
