@@ -78,7 +78,7 @@ showOnlyThisFrame=Yalnızca Bu Çerçeveyi Göster
 properties=Özellikler
 printPage=Sayfayı Yazdır
 mail=Posta
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 
 cut=Kes
 copy=Kopyala
