@@ -78,7 +78,7 @@ showOnlyThisFrame=只显示此框架
 properties=属性
 printPage=打印页面
 mail=主要
-privateBrowsing=进入隐私浏览模式。
+newPrivateWindow = New Private Window
 
 cut=剪切
 copy=复制
