@@ -78,7 +78,7 @@ showOnlyThisFrame = 只顯示本頁框
 properties=屬性
 printPage=列印 
 mail=Mail
-privateBrowsing = Toggle Private Browsing
+newPrivateWindow = New Private Window
 
 cut=剪下
 copy=複製
