@@ -28,3 +28,4 @@ Changes by ngdeleito (see git history for the full details)
 - added new Restart Firefox action
 - easyGestures is now a restartless extension
 - removed welcome page
+- renamed and adapted accordingly privateBrowsing action to newPrivateWindow
